# MaidSafe-Vault

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  README  README.md
cmake/: message_types.h.in
docs/: Get.md  MessageFlow.md  Messaging.md  Personas-Account-Transfer-Fields  Personas-Account-Transfer-Fields.md  Put(|D)  Put(|D).md  Put-Proposal(D).md  Put.md  PutNow.md  Puts.md  account_transfer.md  conventions.md  data_manager_account.md  maid_account.md  mpid_messaging.md  pmid_account.md  pmid_create_store.md  pmid_mpid_create_store.md  split_pmid_node.md
src/maidsafe/vault/: .account_handler.h.swp  .database_merge.h.swp  .maid_account_holder.h.swp  account_db.cc  account_db.h  account_handler.cc  account_handler.h  account_holder-inl.h  account_holder.h  account_transfer.h  account_transfer.proto  account_transfer_handler.h  accumulator-inl.h  accumulator.cc  accumulator.h  action_account_transfer.h  action_create_remove_account.h  active_file_handler-inl.h  active_file_handler.cc  active_file_handler.h  chunk_store.cc  chunk_store.h  config.h  data_holder-inl.h  data_holder.cc  data_holder.h  data_holder_service-inl.h  data_holder_service.cc  data_holder_service.h  data_manager.h  database_merge.h  database_merge.inl  database_operations.cc  database_operations.h  db.cc  db.h  db_key.cc  db_key.h  delete_policies.h  demultiplexer.cc  (+141 more)
src/maidsafe/vault/archived/: account_transfer.h  account_transfer_handler.h  action_create_remove_account.proto  database_operations.h  group_key.h  handled_request.proto  key.cc  key.h  memory_fifo.cc  memory_fifo.h  messages.h  metadata_key.h  sync.h  sync.proto  types.h  unresolved_action.proto  utils.cc  vault_main_old.xx
src/maidsafe/vault/cache_handler/: cache_service.cc  cache_service.h  dispatcher.cc  dispatcher.h  operation_handlers.cc  operation_handlers.h  operation_visitors.h  service.cc  service.h
src/maidsafe/vault/data_holder/: data_holder-inl.h  data_holder.cc  data_holder.h  data_holder_service-inl.h  data_holder_service.cc  data_holder_service.h
src/maidsafe/vault/data_manager/: account.cc  account.h  action_add_pmid.cc  action_add_pmid.h  action_add_pmid.proto  action_deccrement_subscribers.cc  action_deccrement_subscribers.h  action_deccrement_subscribers.proto  action_decrement_subscribers.cc  action_decrement_subscribers.h  action_decrement_subscribers.proto  action_delete.cc  action_delete.h  action_delete.proto  action_increment_subscribers.cc  action_increment_subscribers.h  action_increment_subscribers.proto  action_node_down.cc  action_node_down.h  action_node_down.proto  action_node_up.cc  action_node_up.h  action_node_up.proto  action_put.cc  action_put.h  action_put.proto  action_remove_pmid.cc  action_remove_pmid.h  action_remove_pmid.proto  action_set_pmid_offline.cc  action_set_pmid_offline.h  action_set_pmid_offline.proto  action_set_pmid_online.cc  action_set_pmid_online.h  action_set_pmid_online.proto  data_manager.h  data_manager.proto  data_manager_handler-inl.h  data_manager_handler.cc  data_manager_handler.h  (+50 more)
src/maidsafe/vault/maid_account_holder/: maid_account-inl.h  maid_account.cc  maid_account.h  maid_account.proto  maid_account_handler-inl.h  maid_account_handler.cc  maid_account_handler.h  maid_account_helpers.cc  maid_account_helpers.h  maid_account_holder-inl.h  maid_account_holder.cc  maid_account_holder.h  maid_account_holder_service-inl.h  maid_account_holder_service.cc  maid_account_holder_service.h  maid_account_merge_policy.cc  maid_account_merge_policy.h  maid_account_sync.cc  maid_account_sync.h  maid_account_sync_handler.cc  maid_account_sync_handler.h
src/maidsafe/vault/maid_manager/: account.cc  account.cx  account.h  account.hx  action_account_transfer_db.cx  action_account_transfer_db.hx  action_account_transfer_metadata.hx  action_create_remove_account.cc  action_create_remove_account.h  action_create_remove_account.proto  action_delete.cc  action_delete.h  action_delete.proto  action_put.cc  action_put.h  action_put.proto  action_reference_count.cc  action_reference_count.h  action_reference_counts.h  action_reference_counts.proto  action_register_pmid.cc  action_register_pmid.h  action_register_pmid.proto  action_register_unregister_pmid.cc  action_register_unregister_pmid.h  action_register_unregister_pmid.proto  action_unregister_pmid.cc  action_unregister_pmid.h  action_unregister_pmid.proto  action_update_pmid_health.cc  action_update_pmid_health.h  action_update_pmid_health.proto  dispatcher.cc  dispatcher.h  handler-inl.h  handler.cc  handler.h  helpers.cc  helpers.h  helpers.h.orig  (+42 more)
src/maidsafe/vault/message_types/: messages.proto
src/maidsafe/vault/metadata_manager/: data_elements_manager.cc  data_elements_manager.h  metadata-inl.h  metadata.cc  metadata.h  metadata.proto  metadata_db.cc  metadata_db.h  metadata_handler-inl.h  metadata_handler.cc  metadata_handler.h  metadata_helpers.cc  metadata_helpers.h  metadata_manager-inl.h  metadata_manager.cc  metadata_manager.h  metadata_manager_service-inl.h  metadata_manager_service.cc  metadata_manager_service.h  metadata_merge_policy.cc  metadata_merge_policy.h  metadata_pb.h  metadata_value.cc  metadata_value.h
src/maidsafe/vault/mpid_account_holder/: mpid_account_handler-inl.h  mpid_account_handler.cc  mpid_account_handler.h  mpid_account_holder.h  mpid_account_holder_service.cc  mpid_account_holder_service.h
src/maidsafe/vault/mpid_manager/: action_delete_alert.cc  action_delete_alert.h  action_delete_message.cc  action_delete_message.h  action_delete_message.proto  action_message_alert.cc  action_message_alert.h  action_message_alert.proto  action_put_alert.cc  action_put_alert.h  action_put_alert.proto  action_put_message.cc  action_put_message.h  action_put_message.proto  database.cc  database.h  dispatcher.cc  dispatcher.cc.orig  dispatcher.h  handler.cc  handler.h  message_alert.cc  messages.cc  messages.h  mpid_account_handler-inl.h  mpid_account_holder.h  mpid_manager.cc  mpid_manager.h  mpid_manager.proto  mpid_manager_database.cc  mpid_manager_database.h  mpid_manager_handler-inl.h  service.cc  (+8 more)
(+352 files in other folders)
